--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id("org.springframework.boot") version "$springbootVersion"
     id("io.spring.dependency-management") version "1.0.10.RELEASE"
     id "org.jetbrains.kotlin.plugin.spring" version "$kotlinVersion"
-    id "com.avast.gradle.docker-compose" version "0.13.4"
     id "org.flywaydb.flyway" version "$flywayVersion"
     id 'application'
 }
@@ -12,7 +11,6 @@ version = "0.0.1-SNAPSHOT"
 
 java.sourceCompatibility = JavaVersion.VERSION_11
 
-apply plugin: "docker-compose"
 apply plugin: "application"
 
 mainClassName = "com.rmulka.bs.BsApplicationKt"
@@ -24,6 +22,7 @@ repositories {
 
 dependencies {
     implementation project(":database")
+    implementation project(":domain")
 
     implementation "org.springframework.boot:spring-boot-starter-actuator:${springbootVersion}"
     implementation("org.springframework.boot:spring-boot-starter-webflux:$springbootVersion")
@@ -48,12 +47,6 @@ dependencyManagement {
     imports {
         mavenBom "com.wavefront:wavefront-spring-boot-bom:$wavefrontVersion"
     }
-}
-
-dockerCompose {
-    noRecreate = true
-    projectName = "bs"
-    removeOrphans = true
 }
 
 flyway {
