--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'nu.studer.jooq' version '5.2'
-    id "com.avast.gradle.docker-compose" version "0.13.4"
     id "org.flywaydb.flyway" version "$flywayVersion"
     id "java-library"
 }
@@ -12,7 +11,6 @@ java.sourceCompatibility = JavaVersion.VERSION_11
 
 jar.enabled = true
 
-apply plugin: "docker-compose"
 apply plugin: 'java'
 
 repositories {
@@ -84,6 +82,6 @@ test {
     useJUnitPlatform()
 }
 
-project.tasks.getByName('generateJooq').dependsOn composeUp
+project.tasks.getByName('generateJooq').dependsOn rootProject.composeUp
 project.tasks.getByName('generateJooq').dependsOn flywayMigrate
-project.tasks.getByName('generateJooq').finalizedBy composeDownForced
+project.tasks.getByName('generateJooq').finalizedBy rootProject.composeDownForced
