--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,15 +1,3 @@
 spring:
-  datasource:
-#    type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5433/bs
-    username: user
-    password: pass
-    driver-class-name: org.postgresql.Driver
-  flyway:
-    enabled: false
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: 'health,info,metrics'
+  profiles:
+    active: local
