websocket prod config

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,4 +2,4 @@ FROM adoptopenjdk/openjdk11:ubi
 
 COPY build/libs/*.jar api.jar
 
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-Xmx300m", "/api.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-XX:MaxRAM=72m", "-Xmx300m", "-Xss512k", "/api.jar"]
